--- a/registrame2.html
+++ b/registrame2.html
@@ -23,7 +23,7 @@
 
                     <div>
                         <form action="/action_page.php">
-                            <img src="img/logo.jpg" class="rounded mx-auto d-block" alt="logo" style=" height:160px; width:250px ;">
+                            <img src="img/logo.png" class="rounded mx-auto d-block" alt="logo" style=" height:160px; width:250px ;">
                             <br>
                             <label for="correo">Correo:</label>
                             <input type="email" id="correo" name="correo" placeholder="Digita tu correo">
