--- a/pagar.html
+++ b/pagar.html
@@ -18,7 +18,7 @@
             <div class="row">
                 <div class="col-md-10">
                     <div class="logo-izq">
-                        <img src="img/logo.jpg" alt="logo" style="height:160px; width: 250px;   ">
+                        <img src="img/logo.png" alt="logo" style="height:160px; width: 250px;   ">
                     </div>
                 </div>
                 <div class="col-md-2">
