--- a/tienda2.html
+++ b/tienda2.html
@@ -184,7 +184,7 @@
 <div class="col-xs-6 col-md-4">
 	
   <center>
-    <a href="carrito.html"> <i class="fa fa-shopping-cart fa-5x" > </i>
+    <a href="pagar.html"> <i class="fa fa-shopping-cart fa-5x" > </i>
   
   </a><br>
   <br>
