--- a/tienda2.html
+++ b/tienda2.html
@@ -20,15 +20,14 @@
       </div>
       <div class="col-md-2">
         <div class="info-der ">
-          <button type="button" class="btn btn-dark mt-3 btn-sm">Iniciar sesión</button>
+          <button type="button" class="btn btn-dark mt-3 btn-sm" data-toggle="Iniciar sesión" title="Iniciar sesión">Iniciar sesión</button>
           <br>
-          <button type="button" class="btn btn-dark mt-3 btn-sm">Registrarse</button>
+          <button type="button" class="btn btn-dark mt-3 btn-sm" data-toggle="Regístrate" title="Regístrate">Registrarse</button>
         </div>
       </div>
     </div>
   </div>
 </header>
-	
 <nav class="navbar navbar-expand-lg navbar-light bg-light"> <a class="navbar-brand" href="#">Filtrar</a>
   <div class="dropdown">
     <button class="btn btn-warning dropdown-toggle" type="button" id="ciudad" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Ciudad </button>
@@ -65,134 +64,140 @@
   </div>
   <form class="form-inline my-2 my-lg-0">
     <input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Buscar">
-    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    <button class="btn btn-outline-warning my-2 my-sm-0" type="submit" data-toggle="Buscar" title="Buscar">Buscar</button>
   </form>
 </nav>
-
 <div class="container-fluid">
-<div class="row">
-	<div class="color1 col-md-8">
-  <table class="table">
-    <td><div class="card" style="width: 18rem; background-color: rgb(252, 227, 0);"> <img src="img/leche.jpg" class="card-img-top" alt="..." style="height: 250px;">
-          <div class="card-body">
-            <center>
-              <h5 class="card-title">Leche</h5>
-              <button class="btn" type="button"> <i class="fa fa-cart-plus fa-2x"></i> </button>
-              number
-              <button class="btn" type="button"> <i class="fa fa-cart-arrow-down fa-2x"></i> </button>
-            </center>
-            </th>
-          </div>
-        </div></td>
-      <td><div class="card" style="width: 18rem; background-color: rgb(252, 227, 0);"> <img src="img/leche.jpg" class="card-img-top" alt="..." style="height: 250px;">
-          <div class="card-body">
-            <center>
-              <h5 class="card-title">Leche</h5>
-              <button class="btn" type="button"> <i class="fa fa-cart-plus fa-2x"></i> </button>
-              number
-              <button class="btn" type="button"> <i class="fa fa-cart-arrow-down fa-2x"></i> </button>
-            </center>
-            </th>
-          </div>
-        </div></td>
-      <td><div class="card" style="width: 18rem; background-color: rgb(252, 227, 0);"> <img src="img/leche.jpg" class="card-img-top" alt="..." style="height: 250px;">
-          <div class="card-body">
-            <center>
-              <h5 class="card-title">Leche</h5>
-              <button class="btn" type="button"> <i class="fa fa-cart-plus fa-2x"></i> </button>
-              number
-              <button class="btn" type="button"> <i class="fa fa-cart-arrow-down fa-2x"></i> </button>
-            </center>
-            </th>
-          </div>
-        </div></td>
-    </tr>
-    <tr align="center">
-      <td><div class="card" style="width: 18rem; background-color: rgb(252, 227, 0);"> <img src="img/leche.jpg" class="card-img-top" alt="..." style="height: 250px;">
-          <div class="card-body">
-            <center>
-              <h5 class="card-title">Leche</h5>
-              <button class="btn" type="button"> <i class="fa fa-cart-plus fa-2x"></i> </button>
-              number
-              <button class="btn" type="button"> <i class="fa fa-cart-arrow-down fa-2x"></i> </button>
-            </center>
-            </th>
-          </div>
-        </div></td>
-      <td><div class="card" style="width: 18rem; background-color: rgb(252, 227, 0);"> <img src="img/leche.jpg" class="card-img-top" alt="..." style="height: 250px;">
-          <div class="card-body">
-            <center>
-              <h5 class="card-title">Leche</h5>
-              <button class="btn" type="button"> <i class="fa fa-cart-plus fa-2x"></i> </button>
-              number
-              <button class="btn" type="button"> <i class="fa fa-cart-arrow-down fa-2x"></i> </button>
-            </center>
-            </th>
-          </div>
-        </div></td>
-      <td><div class="card" style="width: 18rem; background-color: rgb(252, 227, 0);"> <img src="img/leche.jpg" class="card-img-top" alt="..." style="height: 250px;">
-          <div class="card-body">
-            <center>
-              <h5 class="card-title">Leche</h5>
-              <button class="btn" type="button"> <i class="fa fa-cart-plus fa-2x"></i> </button>
-              number
-              <button class="btn" type="button"> <i class="fa fa-cart-arrow-down fa-2x"></i> </button>
-            </center>
-            </th>
-          </div>
-        </div></td>
-    </tr>
-    <tr>
-      <td><div class="card" style="width: 18rem; background-color: rgb(252, 227, 0);"> <img src="img/leche.jpg" class="card-img-top" alt="..." style="height: 250px;">
-          <div class="card-body">
-            <center>
-              <h5 class="card-title">Leche</h5>
-              <button class="btn" type="button"> <i class="fa fa-cart-plus fa-2x"></i> </button>
-              number
-              <button class="btn" type="button"> <i class="fa fa-cart-arrow-down fa-2x"></i> </button>
-            </center>
-            </th>
-          </div>
-        </div></td>
-      <td><div class="card" style="width: 18rem; background-color: rgb(252, 227, 0);"> <img src="img/leche.jpg" class="card-img-top" alt="..." style="height: 250px;">
-          <div class="card-body">
-            <center>
-              <h5 class="card-title">Leche</h5>
-              <button class="btn" type="button"> <i class="fa fa-cart-plus fa-2x"></i> </button>
-              number
-              <button class="btn" type="button"> <i class="fa fa-cart-arrow-down fa-2x"></i> </button>
-            </center>
-            </th>
-          </div>
-        </div></td>
-      <td><div class="card" style="width: 18rem; background-color: rgb(252, 227, 0);"> <img src="img/leche.jpg" class="card-img-top" alt="..." style="height: 250px;">
-          <div class="card-body">
-            <center>
-              <h5 class="card-title">Leche</h5>
-              <button class="btn" type="button"> <i class="fa fa-cart-plus fa-2x"></i> </button>
-              number
-              <button class="btn" type="button"> <i class="fa fa-cart-arrow-down fa-2x"></i> </button>
-            </center>
-            </th>
-          </div>
-        </div></td>
-  </table>
-</div>
-
-
-
-<div class="col-xs-6 col-md-4">
-	
-  <center>
-    <a href="pagar.html" tittle="Pagar"> <i class="fa fa-shopping-cart fa-5x" > </i>
-  
-  </a><br>
-  <br>
-  <br>
-  <p> Producto nombre cantidad <a href="#"> <i class="fa fa-cart-arrow-down fa-2x" ></i> </a> </p>
-	  </center>
-	</div>
-</div>
+  <div class="row">
+    <div class="color1 col-md-8">
+      <table class="table">
+        <td><div class="card" style="width: 18rem; background-color: rgb(252, 227, 0);"> <img src="img/leche.jpg" class="card-img-top" alt="..." style="height: 250px;">
+              <div class="card-body">
+                <center>
+                  <h5 class="card-title">Leche</h5>
+                  <button class="btn" type="button" data-toggle="Agregar 1" title="Agrega 1"> <i class="fa fa-cart-plus fa-2x"></i> </button>
+                  number
+                  <button class="btn" type="button" data-toggle="Quita 1" title="Quita 1"> <i class="fa fa-cart-arrow-down fa-2x"></i> </button>
+                  <button type="button" class="btn btn-dark" data-toggle="Enviar al carrito" title="Enviar al carrito">Agregar</button>
+                </center>
+                </th>
+              </div>
+            </div></td>
+          <td><div class="card" style="width: 18rem; background-color: rgb(252, 227, 0);"> <img src="img/leche.jpg" class="card-img-top" alt="..." style="height: 250px;">
+              <div class="card-body">
+                <center>
+                  <h5 class="card-title">Leche</h5>
+                  <button class="btn" type="button" data-toggle="Agregar 1" title="Agrega 1"> <i class="fa fa-cart-plus fa-2x"></i> </button>
+                  number
+                  <button class="btn" type="button" data-toggle="Quita 1" title="Quita 1"> <i class="fa fa-cart-arrow-down fa-2x"></i> </button>
+                  <button type="button" class="btn btn-dark" data-toggle="Enviar al carrito" title="Enviar al carrito">Agregar</button>
+                </center>
+                </th>
+              </div>
+            </div></td>
+          <td><div class="card" style="width: 18rem; background-color: rgb(252, 227, 0);"> <img src="img/leche.jpg" class="card-img-top" alt="..." style="height: 250px;">
+              <div class="card-body">
+                <center>
+                  <h5 class="card-title">Leche</h5>
+                  <button class="btn" type="button" data-toggle="Agregar 1" title="Agrega 1"> <i class="fa fa-cart-plus fa-2x"></i> </button>
+                  number
+                  <button class="btn" type="button" data-toggle="Quita 1" title="Quita 1"> <i class="fa fa-cart-arrow-down fa-2x"></i> </button>
+                  <button type="button" class="btn btn-dark" data-toggle="Enviar al carrito" title="Enviar al carrito">Agregar</button>
+                </center>
+                </th>
+              </div>
+            </div></td>
+        </tr>
+        <tr align="center">
+          <td><div class="card" style="width: 18rem; background-color: rgb(252, 227, 0);"> <img src="img/leche.jpg" class="card-img-top" alt="..." style="height: 250px;">
+              <div class="card-body">
+                <center>
+                  <h5 class="card-title">Leche</h5>
+                  <button class="btn" type="button" data-toggle="Agregar 1" title="Agrega 1"> <i class="fa fa-cart-plus fa-2x"></i> </button>
+                  number
+                  <button class="btn" type="button" data-toggle="Quita 1" title="Quita 1"> <i class="fa fa-cart-arrow-down fa-2x"></i> </button>
+                  <button type="button" class="btn btn-dark" data-toggle="Enviar al carrito" title="Enviar al carrito">Agregar</button>
+                </center>
+                </th>
+              </div>
+            </div></td>
+          <td><div class="card" style="width: 18rem; background-color: rgb(252, 227, 0);"> <img src="img/leche.jpg" class="card-img-top" alt="..." style="height: 250px;">
+              <div class="card-body">
+                <center>
+                  <h5 class="card-title">Leche</h5>
+                  <button class="btn" type="button" data-toggle="Agregar 1" title="Agrega 1"> <i class="fa fa-cart-plus fa-2x"></i> </button>
+                  number
+                  <button class="btn" type="button" data-toggle="Quita 1" title="Quita 1"> <i class="fa fa-cart-arrow-down fa-2x"></i> </button>
+                  <button type="button" class="btn btn-dark" data-toggle="Enviar al carrito" title="Enviar al carrito">Agregar</button>
+                </center>
+                </th>
+              </div>
+            </div></td>
+          <td><div class="card" style="width: 18rem; background-color: rgb(252, 227, 0);"> <img src="img/leche.jpg" class="card-img-top" alt="..." style="height: 250px;">
+              <div class="card-body">
+                <center>
+                  <h5 class="card-title">Leche</h5>
+                  <button class="btn" type="button" data-toggle="Agregar 1" title="Agrega 1"> <i class="fa fa-cart-plus fa-2x"></i> </button>
+                  number
+                  <button class="btn" type="button" data-toggle="Quita 1" title="Quita 1"> <i class="fa fa-cart-arrow-down fa-2x"></i> </button>
+                  <button type="button" class="btn btn-dark" data-toggle="Enviar al carrito" title="Enviar al carrito">Agregar</button>
+                </center>
+                </th>
+              </div>
+            </div></td>
+        </tr>
+        <tr>
+          <td><div class="card" style="width: 18rem; background-color: rgb(252, 227, 0);"> <img src="img/leche.jpg" class="card-img-top" alt="..." style="height: 250px;">
+              <div class="card-body">
+                <center>
+                  <h5 class="card-title">Leche</h5>
+                  <button class="btn" type="button" data-toggle="Agregar 1" title="Agrega 1"> <i class="fa fa-cart-plus fa-2x"></i> </button>
+                  number
+                  <button class="btn" type="button" data-toggle="Quita 1" title="Quita 1"> <i class="fa fa-cart-arrow-down fa-2x"></i> </button>
+                  <button type="button" class="btn btn-dark" data-toggle="Enviar al carrito" title="Enviar al carrito">Agregar</button>
+                </center>
+                </th>
+              </div>
+            </div></td>
+          <td><div class="card" style="width: 18rem; background-color: rgb(252, 227, 0);"> <img src="img/leche.jpg" class="card-img-top" alt="..." style="height: 250px;">
+              <div class="card-body">
+                <center>
+                  <h5 class="card-title">Leche</h5>
+                  <button class="btn" type="button" data-toggle="Agregar 1" title="Agrega 1"> <i class="fa fa-cart-plus fa-2x"></i> </button>
+                  number
+                  <button class="btn" type="button" data-toggle="Quita 1" title="Quita 1"> <i class="fa fa-cart-arrow-down fa-2x"></i> </button>
+                  <button type="button" class="btn btn-dark" data-toggle="Enviar al carrito" title="Enviar al carrito">Agregar</button>
+                </center>
+                </th>
+              </div>
+            </div></td>
+          <td><div class="card" style="width: 18rem; background-color: rgb(252, 227, 0);"> <img src="img/leche.jpg" class="card-img-top" alt="..." style="height: 250px;">
+              <div class="card-body">
+                <center>
+                  <h5 class="card-title">Leche</h5>
+                  <button class="btn" type="button" data-toggle="Agregar 1" title="Agrega 1"> <i class="fa fa-cart-plus fa-2x"></i> </button>
+                  number
+                  <button class="btn" type="button" data-toggle="Quita 1" title="Quita 1"> <i class="fa fa-cart-arrow-down fa-2x"></i> </button>
+                  <button type="button" class="btn btn-dark" data-toggle="Enviar al carrito" title="Enviar al carrito">Agregar</button>
+                </center>
+                </th>
+              </div>
+            </div></td>
+      </table>
+    </div>
+    <div class="col-xs-6 col-md-4">
+      <center>
+        <a href="pagar.html">
+        <button class="btn btn-outline-primary" data-toggle="Pagar" title="Pagar"> <i class="fa fa-shopping-cart fa-5x"></i></button>
+        </a><br>
+        <br>
+        <br>
+        <p> Producto cantidad <a href="#">
+          <button class="btn btn-outline-primary" data-toggle="Eliminar" title="Eliminar"><i class="fa fa-cart-arrow-down fa-2x" ></i> </button>
+          </a></p>
+      </center>
+    </div>
+  </div>
 </div>
 
 <!-- Latest compiled and minified JavaScript --> 
